--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,3 +59,39 @@ body {
     background: #36393f;
     border-radius: 5px;
 }
+
+.item-room:hover {
+    cursor: pointer;
+    background: #36393f;
+    border-radius: 5px;
+}
+
+.item-room.active {
+    background: #36393f;
+    border-radius: 5px;
+}
+
+.list-messages {
+    overflow-y: auto;
+    max-height: calc(100vh - 160px);
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
