--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
         <script src="/javascripts/index.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/javascripts/socket.js"></script>
+        <script src="/javascripts/socket-display.js"></script>
     </head>
     <body class="d-flex flex-column">
         <div class="container-fluid flex-fill d-flex flex-column">
