--- a/views/partials/topbar.ejs
+++ b/views/partials/topbar.ejs
@@ -4,7 +4,7 @@
     </a>
     <div class="d-flex flex-row">
       <% if (user) { %>
-      <div id="logout" class="mx-3">Déconnexion</div>
+      <div id="logout" class="logout mx-3">Déconnexion</div>
       <% } else { %>
       <a href="/users/new" class="mx-3">Inscription</a>
       <a href="/auth/signin/form" class="mx-3">Connexion</a>
