--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/javascripts/socket.js"></script>
         <script src="/javascripts/socket-display.js"></script>
+        <script src="/javascripts/socket-input.js"></script>
     </head>
     <body class="d-flex flex-column">
         <div class="container-fluid flex-fill d-flex flex-column">
