--- a/views/partials/namespaces.ejs
+++ b/views/partials/namespaces.ejs
@@ -1,13 +1,3 @@
 <div class="container-namespaces pt-4">
-    <ul class="list-namespaces">
-        <li class="item-namespace p-1 mb-1">
-            <img src="/images/angular.png" />
-        </li>
-        <li class="item-namespace p-1 mb-1">
-            <img src="/images/angular.png" />
-        </li>
-        <li class="item-namespace p-1 mb-1">
-            <img src="/images/angular.png" />
-        </li>
-    </ul>
+    <ul class="list-namespaces"></ul>
 </div>
